# Core_Master

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  toolchain.cmake
app/: CMakeLists.txt
app/media/: media_config.hpp
app/media/audio/: audio.cc  audio.hpp
app/media/camera/: camera.cc  camera.hpp
app/media/sync/: sync.cc  sync.hpp
app/protocol/: protocol_config.hpp
app/protocol/rtsp/: rtsp.h
app/rknn/: rknn.cc  rknn.hpp  rknn_config.hpp
app/rknn/face_detection/: face_detection.cc  face_detection.hpp  retinaface_anchors.cc  retinaface_anchors.hpp
app/rknn/face_recognition/: face_recognition.cc  face_recognition.hpp
app/tool/file/: file.cc  file.hpp
app/tool/log/: log.cc  log.hpp
app/tool/memory/: memory.cc  memory.hpp
app/tool/memory/double_buffer/: double_buffer.hpp  double_buffer_impl.hpp
app/tool/memory/ring_buffer/: ring_buffer.hpp  ring_buffer_impl.hpp
app/tool/time/: time.cc  time.hpp
common/: CMakeLists.txt
common/spi/: spi_master.cc  spi_master.hpp
common/uart/: uart.cc  uart.hpp
common/uart/message/: dispatcher.cc  dispatcher.hpp  message.cc  message.hpp
common/uart/module/: base.hpp
common/uart/module/config/: config.cc  config.hpp
common/uart/module/network/: network.cc  network.hpp
common/uart/module/sensor/: sensor.cc  sensor.hpp
common/uart/module/system/: system.cc  system.hpp
scripts/: check_code.sh  format_code.sh
test/: test_audio_main.cpp  test_camera_main.cpp  test_face_main.cpp  test_load_model_main.cpp  test_mac_main.cpp  test_memory_main.cpp  test_opencv_main.cpp  test_record_audio_main.cpp  test_rtsp_main.cpp  test_spi_main.cpp  test_take_photo_main.cpp  test_time_main.cpp  test_uuid_main.cpp  test_v4l2_main.cpp
